log/build_2024-12-30_21-17-39/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/controller.py", line 43
    rclpy.init(args=args):
                         ^
SyntaxError: invalid syntax

